# byggis

./: .gitignore  Cargo.toml  README.md  TODO
hangman/: .byggis  main.py
hello/: .byggis  main.py
src/: creator.rs  describer.rs  helper.rs  lib.rs  main.rs  runner.rs  submitter.rs  submitter_old.rs  supported_languages.rs
